Fix horizontal scroll on ie8

--- a/css/style-ie8.css
+++ b/css/style-ie8.css
@@ -189,13 +189,15 @@
 
 .wrapper {
     position: relative;
-    width: 100%;
+    top: 2px;
+    width: auto;
     height: 400px;
     padding-top: 50px;
     border-bottom: 1px solid #e6e5e5;
 }
 
 .columns_violet ~ .wrapper {
+    width: 95%;
     margin-bottom: 20px;
     background-color: #f9f9f9;
 }
@@ -204,7 +206,6 @@
 .entity_cite__text {
     margin-left: 10%;
 }
-
 
 .entity_cite__heading {
     position: relative;
@@ -225,7 +226,7 @@
     position: absolute;
     top: 75px;
     left: 0;
-    width: 370px;
+    width: 340px;
     height: 230px;
     padding: 50px 30px 10px;
     background-image: url('../img/cite-bg.png');
@@ -301,6 +302,7 @@
     position: relative;
     top: 50px;
     width: 250px;
+    text-align: left;
     z-index: 10;
 }
 
@@ -327,6 +329,7 @@
 }
 
 .footer ~ .wrapper {
+    width: 100%;
     height: 120px;
     padding-top: 50px;
 }
